# oxideav-g729

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
src/: annex_b_cng.rs  annex_b_vad.rs  bitreader.rs  codec.rs  decode_chain.rs  decoder.rs  encoder.rs  fixed_codebook.rs  gain_index_map.rs  gain_predict.rs  gain_reconstruct.rs  lib.rs  lp_synthesis.rs  lpc.rs  lsp_interpolate.rs  lsp_reconstruct.rs  lsp_tables.rs  lsp_to_lp.rs  open_loop_pitch.rs  parameters.rs  pitch_decode.rs  pitch_sharpen.rs  post_process.rs  serial.rs  synthesis.rs  tables.rs  weighting.rs
tables/: basic-op-invsqrt-table.csv  basic-op-log2-table.csv  basic-op-pow2-table.csv  bit-allocation-per-parameter-table8.csv  gain-quantizer-codebook-GA-Q14-Q12.csv  gain-quantizer-codebook-GA-thresholds-Q14.csv  gain-quantizer-codebook-GB-Q14-Q12.csv  gain-quantizer-codebook-GB-inverse-permutation.csv  gain-quantizer-codebook-GB-permutation.csv  gain-quantizer-codebook-GB-thresholds-Q15.csv  gain-quantizer-ma-predictor-Q13.csv  lpc-autocorr-lag-window-high-Q15.csv  lpc-autocorr-lag-window-low-Q15.csv  lpc-hamming-window-Q15.csv  lsf-search-grid-cos-Q15.csv  lsp-ma-predictor-fg-Q15.csv  lsp-ma-predictor-fg-sum-Q15.csv  lsp-ma-predictor-fg-sum-inv-Q12.csv  lsp-quantizer-codebook-L1-Q13.csv  lsp-quantizer-codebook-L2-Q13.csv  pitch-interpolation-filter-analysis-Q15.csv  pitch-interpolation-filter-synthesis-Q15.csv  preproc-highpass-100Hz-a-Q13.csv  preproc-highpass-100Hz-b-Q13.csv  preproc-highpass-140Hz-a-Q12.csv  preproc-highpass-140Hz-b-Q12.csv
tests/: annex_b.rs  decode_chain_conformance.rs  encoder_roundtrip.rs  lp_synthesis_conformance.rs  post_process_conformance.rs  serial_conformance.rs  tables_shape.rs
