[package]
name = "oxideav-g729"
version = "0.0.5"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-g729"
authors = ["Mark Karpeles"]
description = "Pure-Rust ITU-T G.729 (CS-ACELP, 8 kbit/s) decoder + encoder"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-g729"
keywords = ["multimedia", "audio", "g729", "telephony", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = "0.1"
# Distributed-slice auto-registration into `oxideav_core::REGISTRARS`
# via the `oxideav_core::register!` macro. Tiny crate, no transitive
# deps; works on every target including wasm.
linkme = "0.3"
